--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ dj-database-url==0.5.0
 Django==5.2.1
 gunicorn==20.1.0
 psycopg2-binary==2.9.10
+python-decouple==3.8
 setuptools==80.4.0
 sqlparse==0.5.3
 whitenoise==5.3.0
