--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,11 @@ asgiref==3.8.1
 certifi==2025.4.26
 charset-normalizer==3.4.2
 cloudinary==1.36.0
+crispy-bootstrap5==2025.4
 dj-database-url==0.5.0
 dj3-cloudinary-storage==0.0.6
 Django==5.2.1
+django-crispy-forms==2.4
 gunicorn==20.1.0
 idna==3.10
 psycopg2-binary==2.9.10
