--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ crispy-bootstrap5==2025.4
 dj-database-url==0.5.0
 dj3-cloudinary-storage==0.0.6
 Django==5.2.1
+django-allauth==65.8.0
 django-crispy-forms==2.4
 gunicorn==20.1.0
 idna==3.10
